*Empty MediaWiki Message*

--- a/Mokókóló_mwa_atome.mw
+++ b/Mokókóló_mwa_atome.mw
@@ -1,4 +1,5 @@
-'''Mokókóló''' tǒ mokókóli ([[kémi]]) ezalí eténi ya [[atome]] na káti na yangó [[proton|baproton]] na [[netron|banetron]] ezalí. Bonɛ́nɛ ya atome na masi na yangó pɛnɛpɛnɛ ezalí nyɔ́nsɔ na káti ya mokókóló.
+[[Image:Atom.png|right|300px|thumbnail|Atome na [[eliyúmu]] (He).  Baproton bizalí [[motáné ngwa]] mpé banetron bizalí [[mái ma mpɔndú]].]]
+'''Mokókóló''' tǒ '''mokókóli''' ([[kémi]]) ezalí eténi ya [[atome]] na káti na yangó [[proton|baproton]] na [[netron|banetron]] ezalí . Bonɛ́nɛ ya atome na masi na yangó pɛnɛpɛnɛ ezalí nyɔ́nsɔ na káti ya mokókóló.
 
 [[Category:Kémi]]
 
