*Empty MediaWiki Message*

--- a/Esálela.mw
+++ b/Esálela.mw
@@ -1,17 +1,24 @@
-[[Image:Macintosh classic.jpg|thumb|*]]
+[[Image:Macintosh classic.jpg|thumb|Ndakisa : esálela ya Apple]]
+'''Esálela''' tǒ '''odinatɛ́lɛ''' (''ordinateur'' na lokóta ya [[lifalansé]]) ezalí masíni ma botángi mpé ya kobómba bikomá biyíké.
 
-== _==
-[[emónisi]]
-[[ebimiselo]]
-[[paláki]]
-[[bongó]]
-[[mángolá]]
-[[molembo]]
-[[mpúku]]
-[[etángela]]
-[[diski ebómbelo enéne]]
-[[diski ebómbelo iké]]
-[[nsábi]]
+== Biténi ya masíni ==
+[[Image:Personal computer, exploded 5.svg|thumb|300px|left|Biténi ya odinatɛ́lɛ]]
+# [[emɔ́nisi]]
+# liyémi
+# [[bongó]]
+# [[etando-mokonzi]]
+# mayémi
+# boléi ya lotilíki
+# [[etángela]] (mpɔ́ na [[paláki]])
+# [[diski ebómbelo enéne]]
+# [[mángolá]]
+# [[mpúku]] tǒ mpóko
+<div style="clear: all">&nbsp;</div>
+==Tála mpé==
+* [[ebimiselo]]
+* [[molembo]]
+* [[diski ebómbelo iké]]
+* [[nsábi]]
 
 [[category:Bongana masíni]]
 [[category:Esálela]]
