*Empty MediaWiki Message*

--- a/Mokokano.mw
+++ b/Mokokano.mw
@@ -1,5 +1,6 @@
-'''Mokokano''' ya [[kémi]] (na lifalanse: ''équation chimique'') ézali kolakisa bobongwani ya biloko. <br>Bikokano* ezali ebele.
-<br><br><br><small>*mokokano: équation, ekeseni na bokokani: égalité</small>
+'''Mokokano''' ya [[kémi]] (na lifalanse: ''équation chimique'', bizalí '''bikokano'''* na [[boyíké]]) ezalí kolakisa bobongwani ya bilɔ́kɔ. 
+
+<small>*mokokano: équation, ekeseni na bokokani: égalité</small>
 
 
 [[Category:Kémi]]
