--- a/Proton.mw
+++ b/Proton.mw
@@ -1,11 +1,8 @@
-Proton éteni ya [[atome]] ézali na kati ya [[mokɔkɔli]]. Ezali na mokúmba(charge /sharje/) ya bobakisa(positive "+" ): e = 1,602 189 <small>×</small>10<sup>-19</sup> C ekokani na mokúmba ya eléktron kasi ya molongola(negative "-"). Masi na yango (bozito*, kilo**) ézali m<sub>p</sub> = 1,672 65 <small>×10</small><sup>-27</sup> kg.
-<br><br><br><small>*bozito: elakisi "poids" kasi fizika elobi te "poids" na "masse" ezali eloko moko te!!!</small><br><small> **kilo: ezali moyoko(unité) te kasi lingala ekomisa yango moyoko lokola "gramme" oyo esengeli kozala.</small>
+Proton eténi ya [[atome]] ezalí na káti ya [[Mokókóló ya atome|mokókóló]]. Ezalí na [[mokúmba]] (''charge'') ya bobakisa (positive "+" ): e = 1,602 189 <small>×</small>10<sup>-19</sup> C ekokani na mokúmba ya eléktron kasi ya molongola (negative "-"). Masi na yangó ([[libotá]]*) ezalí m<sub>p</sub> = 1,672 65 <small>×10</small><sup>-27</sup> kg.
+<br><br><br><small>*bozito: elakisi ''poids'' kasi [[fízíkí]] elobí ’te ''poids'' na ''masse'' ezalí elɔ́kɔ mɔ̌kɔ́ tɛ́ !!!</small><br><small> **kilo: ezalí moyoko (unité) ’te kasi lingála ekomisa yangó moyoko lokóla ''gramme'' óyo esengeli kozala.</small>
 
 ==Tála mpé==
 [[Atome]]
-
-
-
 
 [[Category:Kémi]]
 
