--- a/Eléktron.mw
+++ b/Eléktron.mw
@@ -1,6 +1,4 @@
-'''Eléktron''' ezali eténi ya [[atome]] óyo ezali nalibándá. Ezali kobaluka nalibanda ya [[mokɔkɔli]]. <br>Elektron ezali na mokúmba ya molongola (negative "-") e = -1,602 189 <small>×</small>10<sup>-19</sup> C . Masi na yango ezali m<sub>e</sub> = 9,109 53 <small>×</small>10<sup>-31</sup> kg. Mokúmba na yango ezali ndege moko na óyo ya [[proton]] kasi elembo ekeseni.
-
-
+'''Eléktron''' ezalí eténi ya [[atome]] óyo ezali na libándá. Ezalí kobaluka na libanda ya [[mokɔkɔli]]. <br>Eléktron ezalí na mokúmba ya molongola (negative "-") e = -1,602 189 <small>×</small>10<sup>-19</sup> C . Masi na yango ezali m<sub>e</sub> = 9,109 53 <small>×</small>10<sup>-31</sup> kg. Mokúmba na yangó ezalí ndénge mɔ̌kɔ́ na óyo ya [[proton]] kasi elembo ekɛ́sɛ́ní.
 
 [[Category:Atome]]
 
