*Empty MediaWiki Message*

--- a/Netron.mw
+++ b/Netron.mw
@@ -1,4 +1,4 @@
-'''Netron''' ézali etani ya [[atome]] óyo yango na [[proton]] evandi o kati ja [[mokɔkɔli]]. Ezali na mokúmba te. Masi na yango ezali: m<sub>n</sub> = 1,674 95 <small>×</small>10<sup>-27</sup> kg.
+'''Netron''' ezalí eténi ya [[atome]] óyo yangó na [[proton]] evandí o káti ya [[Mokókóló ya atome|mokókóló]]. Ezalí na [[mokúmba]] tɛ́. Masi na yangó ezalí : m<sub>n</sub> = 1,674 95 <small>×</small>10<sup>-27</sup> kg.
 
 
 
