*Empty MediaWiki Message*

--- a/Mokókóló_mwa_atome.mw
+++ b/Mokókóló_mwa_atome.mw
@@ -2,6 +2,7 @@
 '''Mokókóló''' tǒ '''mokókóli''' ([[kémi]]) ezalí eténi ya [[atome]] na káti na yangó [[proton|baproton]] na [[netron|banetron]] ezalí . Bonɛ́nɛ ya atome na masi na yangó pɛnɛpɛnɛ ezalí nyɔ́nsɔ na káti ya mokókóló.
 
 [[Category:Kémi]]
+[[Category:Atome]]
 
 [[ar:نواة ذرة]]
 [[bg:Атомно ядро]]
