--- a/Eléktron.mw
+++ b/Eléktron.mw
@@ -1,3 +1,4 @@
+[[Image:HAtomOrbitals.png|right|thumb|280px|<small><!--TO TRANSLATE:The first few hydrogen [[atom]] electron orbitals shown as cross-sections with color-coded probability density--></small>]]
 '''Eléktron''' ezalí eténi ya [[atome]] óyo ezali na libándá. Ezalí kobaluka na libanda ya [[Mokókóló ya atome|mokókóló]]. <br>Eléktron ezalí na mokúmba ya molongola (negative "-") e = -1,602 189 <small>×</small>10<sup>-19</sup> C . Masi na yangó ezalí m<sub>e</sub> = 9,109 53 <small>×</small>10<sup>-31</sup> kg. Mokúmba na yangó ezalí ndéngé mɔ̌kɔ́ na óyo ya [[proton]] kasi elembo ekɛ́sɛ́ní.
 
 [[Category:Atome]]
