*Empty MediaWiki Message*

--- a/Tableau_periodique.mw
+++ b/Tableau_periodique.mw
@@ -1,5 +1,5 @@
 {| style="border:1px solid" align=center cellpadding=10
-| <big>'''Tableau périodique des éléments en lingala'''</big>
+| <big>'''<center>Etánda lya bileko</center><br><big><center>Tableau périodique des éléments en lingala</center>'''</big>
 |}
 
 
