*Empty MediaWiki Message*

--- a/Tableau_periodique.mw
+++ b/Tableau_periodique.mw
@@ -305,6 +305,7 @@ remerciements a moyogo(wiktionaire)
 [[fa:جدول تناوبی (استاندارد)]]
 [[fi:Alkuaineiden jaksollinen järjestelmä]]
 [[fo:Skeiðbundna skipanin]]
+[[fr:tableau périodique des éléments]]
 [[fur:Tabele periodiche]]
 [[ga:Tábla peiriadach]]
 [[gl:Táboa periódica dos elementos]]
