-remerciement, -titre en français

--- a/Etánda_ya_bileko.mw
+++ b/Etánda_ya_bileko.mw
@@ -1,7 +1,6 @@
 {| style="border:1px solid" align=center cellpadding=10
-| <big>'''<center>Etánda lya bileko</center><br><big><center>Tableau périodique des éléments en lingala</center>'''</big>
+| <big>'''<center>Etánda ya bileko</center>'''</big>
 |}
-
 
 {| border="0" cellpadding="3" cellspacing="1" bordercolor="#FFFFFF" width="80%" align="center" style="margin-bottom: 1.5em"
 |-
@@ -275,11 +274,6 @@ NB : les noms suivis d'un point d'interrogation sont des approximations, il faud
 | bgcolor="#c0ffff" align="center"|[[gaz rare]]s
 |}
 '''NB : à traduire'''
-
-
-
-remerciements a moyogo(wiktionaire)
-
 
 [[category:Kémi]]
 
