*Empty MediaWiki Message*

--- a/Kémi.mw
+++ b/Kémi.mw
@@ -6,6 +6,9 @@ Lisúsu, ezalí mayébi etalí loléngé bilɔ́kɔ ezalí kokangama yangó na y
 
 Ndakisa : [[mokokano]] ya kosala [[mái]]
 :2H<sub>2</sub> + O<sub>2</sub> → 2H<sub>2</sub>O
- 
+
+== Tálá mpé ==
+* [[Etánda ya bileko]]
+
 [[Category:Mambí]]
 [[fr:Chimie]]
