--- a/Lingála.mw
+++ b/Lingála.mw
@@ -105,7 +105,8 @@
 *René Van Everbroeck: '''Maloba Ma Lokota, Lingala-français / français-lingala'''. Limete (Kinshasa): Éditions L'Epiphanie (1985)
 
 ===Nkásá o libándá===
-http://info-langues-congo.1sd.org/Bibliographie_lingala Bibliographie beaucoup plus complèt.
+*http://info-langues-congo.1sd.org/Bibliographie_lingala Bibliographie assez complèt.
+*{{fr}} http://perso.wanadoo.fr/pascal.grouselle/biblio.htm Petite Bibliographie comenté.
 
 ----
 Comment améliorer un article sur une langue?
