/* Nkásá o libándá */ typo

--- a/Lingála.mw
+++ b/Lingála.mw
@@ -105,8 +105,8 @@
 *René Van Everbroeck: '''Maloba Ma Lokota, Lingala-français / français-lingala'''. Limete (Kinshasa): Éditions L'Epiphanie (1985)
 
 ===Nkásá o libándá===
-*http://info-langues-congo.1sd.org/Bibliographie_lingala Bibliographie assez complèt.
-*{{fr}} http://perso.wanadoo.fr/pascal.grouselle/biblio.htm Petite Bibliographie comenté.
+*http://info-langues-congo.1sd.org/Bibliographie_lingala Bibliographie assez complète.
+*{{fr}} http://perso.wanadoo.fr/pascal.grouselle/biblio.htm Petite Bibliographie comentée.
 
 ----
 Comment améliorer un article sur une langue?
