*Empty MediaWiki Message*

--- a/Lingála.mw
+++ b/Lingála.mw
@@ -81,11 +81,6 @@
 |-
 |}
 
-
-==Mankásá o libándá==
-* {{fr}} [http://www.com-nature.com/phorum/list.php3?f=14 Archive du Forum Congopage : Le Lingala]
-* {{fr}} [http://www.congopage.com/phpBB/viewforum.php?f=20 Congopage - Forum : Le Lingala]
-
 ==Tála mpé==
 ===Dictionnaires===
 *Ashem Tem Kawata: '''Dictionnaire Français-Lingala et Lingala-Français''' / dictionnaire et encyclopédie. Karthala ; broché ; 37,05 €
@@ -105,9 +100,10 @@
 *René Van Everbroeck: '''Maloba Ma Lokota, Lingala-français / français-lingala'''. Limete (Kinshasa): Éditions L'Epiphanie (1985)
 
 ===Nkásá o libándá===
-*http://info-langues-congo.1sd.org/Bibliographie_lingala Bibliographie assez complète.
-*{{fr}} http://perso.wanadoo.fr/pascal.grouselle/biblio.htm Petite Bibliographie comentée.
-
+* {{fr}} http://info-langues-congo.1sd.org/Bibliographie_lingala Bibliographie assez complète.
+* {{fr}} http://perso.wanadoo.fr/pascal.grouselle/biblio.htm Petite Bibliographie comentée.
+* {{fr}} [http://www.com-nature.com/phorum/list.php3?f=14 Archive du Forum Congopage : Le Lingala]
+* {{fr}} [http://www.congopage.com/phpBB/viewforum.php?f=20 Congopage - Forum : Le Lingala]
 ----
 Comment améliorer un article sur une langue?
 * classification linguistique
