--- a/Mángolá.mw
+++ b/Mángolá.mw
@@ -1,4 +1,6 @@
 [[Image:Keyboard-gray-old.jpg|thumb|*]]
+'''Mángolá''', tǒ '''gbagba''' mpé '''ekembé''' ezalí mésa ya [[molembo|milembo]] na [[nkoma]] mpó kobɛ́tɛ mpé kokoma na [[esálela]].
+
 {{ndámbo}}
 [[category:Esálela]]
 [[category:Bongana masíni]]
