*Empty MediaWiki Message*

--- a/Falansé.mw
+++ b/Falansé.mw
@@ -1,6 +1,6 @@
 [[Image:Map-Francophone World.png|center|300px|description]]
 
-'''Lifalansé''' ezali [[lokótá]] na bato ya [[Falansia]]. Elobamí o na eténi ya [[Bɛ́lɛjika]], [[Swisi]], [[Kébeki]] na [[Afríka]].
+'''Lifalansé''' ezalí [[lokótá]] na bato ya [[Falansia]]. Elobamí o na eténi ya [[Bɛ́lɛjika]], [[Swisi]], [[Kébeki]] na [[Afríka]].
 
 {{InterWiki|code=fr}}
 
