*Empty MediaWiki Message*

--- a/Mángolá.mw
+++ b/Mángolá.mw
@@ -1,5 +1,5 @@
 [[Image:Keyboard-gray-old.jpg|thumb|*]]
-'''Mángolá''', tǒ '''gbagba''' mpé '''ekembé''' ezalí mésa ya [[molembo|milembo]] na [[nkoma]] mpó kobɛ́tɛ mpé kokoma na [[esálela]].
+'''Mángolá''', tǒ '''gbagba''' mpé '''ekembé''' ezalí mésa ya [[molembo|milembo]] na [[nkomá]] mpó kobɛ́tɛ mpé kokoma na [[esálela]].
 
 {{ndámbo}}
 [[category:Esálela]]
