*Empty MediaWiki Message*

--- a/Molembo.mw
+++ b/Molembo.mw
@@ -1,5 +1,5 @@
 [[Image:Keyboard Closeup.jpg|thumb|*]]
-
+'''Molembo''' tǒ '''túsi''' (''touche'' na lokotá ya [[lifalansé]]) ezalí mbuma ya [[mángolá]], esíká bokoma [[elembo|bilembo]] tǒ [[nkomá]].
 
 {{ndámbo}}
 [[category:Bongana masíni]]
