*Empty MediaWiki Message*

--- a/Molembo.mw
+++ b/Molembo.mw
@@ -1,4 +1,4 @@
-[[Image:Keyboard Closeup.jpg|thumb|*]]
+[[Image:Keyboard Closeup.jpg|thumb|Milembo na mángolá]]
 '''Molembo''' tǒ '''túsi''' (''touche'' na lokotá ya [[lifalansé]]) ezalí mbuma ya [[mángolá]], esíká bokoma [[elembo|bilembo]] tǒ [[nkomá]].
 
 {{ndámbo}}
