--- a/Kiswahíli.mw
+++ b/Kiswahíli.mw
@@ -1,11 +1,8 @@
+[[Image:Maeneo penye wasemaji wa Kiswahili.png|thumb|Bisíká wâná bato balobaka kiswahili.]]
+[[Image:Swahili-pn.jpg|thumb|Ndakisa na lokotá ya kiswahili]]
+'''Kiswahili''' ezalí [[lokótá]] na bato na [[Kɔ́ngɔ-Kinshasa|Kɔ́ngɔ-demokratiki]], [[Kenya]], [[Burundi]], [[Rwanda]], [[Uganda]] mpé [[Tanzania]].
+
 {{ndambo}}
-
-[[Image:Swahili-pn.jpg|thumb|Description]]
-[[Image:Map_-_DR_Congo,_major_languages.svg|thumb|texte manquant pour exemple de langue.]]
-
-'''Kiswahili''' ezali [[lokótá]] na bato na [[Kɔ́ngɔ-Kinshasa|Kɔ́ngɔ-demokratiki]], [[Kenya]], [[Burundi]], [[Rwanda]], [[Uganda]] mpé [[Tanzania]].
-
-
 
 ----
 Comment améliorer un article sur une langue?
