*Empty MediaWiki Message*

--- a/Kiswahíli.mw
+++ b/Kiswahíli.mw
@@ -21,5 +21,32 @@ Comment améliorer un article sur une langue?
 [[Category:Nkotá ya Babantu]]
 [[Category:Nkotá ya mokili]]
 
+[[am:ስዋሂሊ]]
+[[ar:سواحيلية (لغة)]]
+[[ca:Suahili]]
 [[cs:Svahilština]]
+[[cy:Swahili]]
 [[de:Swahili (Sprache)]]
+[[als:Swahili (Sprache)]]
+[[es:Suajili]]
+[[eo:Svahila lingvo]]
+[[fa:زبان سواحلی]]
+[[fr:Swahili]]
+[[ko:스와힐리어]]
+[[io:Swahili linguo]]
+[[it:Lingua swahili]]
+[[kg:Kiswahili]]
+[[sw:Kiswahili]]
+[[li:Swahili]]
+[[nl:Swahili]]
+[[ja:スワヒリ語]]
+[[nn:Swahili]]
+[[oc:Swahili]]
+[[pl:Suahili]]
+[[pt:KiSwahili]]
+[[ru:Суахили]]
+[[sco:Swauheilie]]
+[[fi:Swahilin kieli]]
+[[sv:Swahili]]
+[[th:ภาษาสวาฮีลี]]
+[[zh:斯瓦希里语]]
