:LanguageMap-Kikongo-Kituba.png

--- a/Kikɔ́ngɔ.mw
+++ b/Kikɔ́ngɔ.mw
@@ -1,8 +1,5 @@
-{{ndambo}}
-
-[[Image:Kikongo-m.jpg|thumb|Description manque.]] 
-[[Image:Map_-_DR_Congo,_major_languages.svg|thumb|texte manquant pour exemple de langue.]]
-
+[[Image:LanguageMap-Kikongo-Kituba.png|thumb|Bisíká wâná bato balobaka kikɔ́ngɔ.]]
+[[Image:Kikongo-m.jpg|thumb|Ndakisa na lokotá ya kiswahili]] 
 '''Kikɔ́ngɔ''' ezali [[lokótá]] na bato ya [[Kɔ́ngɔ-Kinshasa|Kɔ́ngɔ Demokrati]], [[Kɔ́ngɔ-Brazaville|Kɔ́ngɔ Brazavili]] mpe na [[Angola]]. 
 
 ==Tálá mpé ==
@@ -11,6 +8,7 @@
 === Nkásá o libándá ===
 * http://www.congopage.com/phpBB/viewforum.php?f=33
 * http://www.ceeba.at/#Etudes%20Linguistiques Institut de culture africaine de Bandundu (lifalansé)
+{{ndambo}}
 
 [[Category:Lokótá]]
 [[Category:bandambo ya Nkota ya Nijer-Kongo]]
