--- a/Molɔngɔ́_ya_bisé_ya_mokili.mw
+++ b/Molɔngɔ́_ya_bisé_ya_mokili.mw
@@ -63,5 +63,74 @@
 [[Zambia]] - [[Zimbabwe]]
 
 
-[[als:Liste unabhängiger Staaten]][[bg:Списък на страните]] [[fr:Liste des pays du monde]]
-[[ca:Estat]] [[cy:Rhestr gwledydd y byd]] [[da:Verdens lande]] [[de:Liste unabhängiger Staaten]] [[el:Λίστα των Χωρών]] [[en:List of sovereign states]] [[eo:Landoj]] [[es:Países del mundo]] [[hi:देशों की सूची]] [[it:Paesi del Mondo]] [[ja:国の一覧]] [[ka:მსოფლიოს ქვეყნები]] [[la:Nationes Mundi]] [[lt:Šalių sąrašas]] [[mg:Lisitry ny firenena]] [[nl:Landen van de wereld]] [[pl:Państwa świata]] [[pt:Países]] [[ru:Алфавитный список стран]] [[sl:Države sveta]] [[sr:Списак држава]] [[sv:Alfabetisk lista över världens länder]] [[uk:Список країн]] [[vi:Danh sách các nước trên thế giới]] [[yi:רשימה פֿון לענדער פֿון װעלט]] [[zh:世界地理索引]]
+[[als:Liste unabhängiger Staaten]]
+[[an:Estatos d'o mundo]]
+[[ast:Llista de países]]
+[[bg:Списък на страните]]
+[[bn:সার্বভৌম রাষ্ট্রসমূহের তালিকা]]
+[[bs:Spisak država]]
+[[ca:Llista d'estats independents i territoris dependents]]
+[[cs:Seznam států světa]]
+[[cy:Gwledydd y byd]]
+[[da:Verdens lande]]
+[[de:Liste unabhängiger Staaten]]
+[[el:Κατάλογος χωρών]]
+[[en:List of countries]]
+[[eo:Listo de sendependaj ŝtatoj]]
+[[es:Portal:Países/Lista alfabética]]
+[[et:Maailma riikide loend]]
+[[fi:Luettelo valtioista]]
+[[fiu-vro:Maailma riike lipuq]]
+[[fr:Liste des pays du monde]]
+[[fur:Liste di Stâts dal mont]]
+[[gl:Lista de países]]
+[[hi:देशों की सूची]]
+[[hr:Popis država]]
+[[hu:Országok listája]]
+[[ia:Paises del mundo]]
+[[id:Daftar negara-negara di dunia]]
+[[ie:Liste del landes del munde]]
+[[it:Stati del mondo]]
+[[ja:国の一覧]]
+[[ka:მსოფლიოს ქვეყნები]]
+[[km:បញ្ជីរាយនាមប្រទេស]]
+[[ko:나라 목록]]
+[[ky:Дүйнө өлкөлөрү]]
+[[la:Nationes mundi]]
+[[lb:Lëscht vun de Länner vun der Welt]]
+[[lt:Šalių sąrašas]]
+[[lv:Valstis]]
+[[mg:Lisitry ny firenena]]
+[[mo:Листэ де стате суверане]]
+[[ms:Daftar negara]]
+[[na:Eb]]
+[[nl:Landen van de wereld]]
+[[nn:Verdas land]]
+[[no:Liste over stater]]
+[[oc:Païses]]
+[[os:Бæстæты номхыгъд]]
+[[pl:Państwa świata]]
+[[pt:Lista de países]] but to [[pt:Países]]
+[[pt:Países]]
+[[rm:Glista dals stadis independents]]
+[[ro:Listă de state suverane]]
+[[ru:Алфавитный список стран и территорий]]
+[[scn:Lista dî Paisi dû Munnu]]
+[[sh:Spisak država]]
+[[simple:List of countries]]
+[[sk:Zoznam štátov]]
+[[sl:Seznam suverenih držav]]
+[[sr:Списак држава]]
+[[su:Daptar nagara]]
+[[sv:Lista över länder]]
+[[ta:உலக நாடுகளின் பட்டியல்]]
+[[tl:Talaan ng mga bansa]]
+[[tpi:Jiograpi]]
+[[tr:Ülkeler]]
+[[tt:Däwlätlär isemlege]]
+[[uk:Список країн]]
+[[ur:ممالک]]
+[[vi:Danh sách quốc gia]]
+[[yi:רשימה פֿון לענדער פֿון װעלט]]
+[[zh:世界地理索引]]
+[[zh-min-nan:Kok-ka lia̍t-toaⁿ]]
