--- a/Molɔngɔ́_ya_bisé_ya_mokili.mw
+++ b/Molɔngɔ́_ya_bisé_ya_mokili.mw
@@ -29,7 +29,7 @@
 [[Kamerun]] - [[Kanadá]] - [[Kenya]] - [[Komori]] - [[Kɔ́ngɔ-Brazzaville]] - [[Kɔ́ngɔ-Kinshasa]] - [[Kotdivuar]] (Cote d'ivoire)
 
 === L ===
-[[Liberia]] - [[Libîya]] - [[Luksambur]]
+[[Liberia]] - [[Libîya]] - [[Litaue]] - [[Luksambur]]
 
 === M ===
 [[Malawi]] - [[Mali]] - [[Moritani]] - [[Mozambiki]]
