*Empty MediaWiki Message*

--- a/Mokokano.mw
+++ b/Mokokano.mw
@@ -1,5 +1,10 @@
 '''Mokokano''' ya [[kémi]] (na lifalanse: ''équation chimique'', bizalí '''bikokano'''* na [[boyíké]]) ezalí kolakisa bobongwani ya bilɔ́kɔ. 
 
+nd:
+<center>NaOH + HCl -----> [[NaCl]] + H<sub>2</sub>O</center>
+bokokano ya kosala [[mungwa]].
+
+
 <small>*mokokano: équation, ekeseni na bokokani: égalité</small>
 
 
