*Empty MediaWiki Message*

--- a/Kémi.mw
+++ b/Kémi.mw
@@ -5,10 +5,12 @@ Lisúsu, ezalí mayébi etalí loléngé bilɔ́kɔ ezalí kokangama yangó na y
 [[Atome|Baatome]] ezalí kokangama mpɔ́ ya kotonga [[molékili|bamolékili]].
 
 Ndakisa : [[mokokano]] ya kosala [[mái]]
-:2H<sub>2</sub> + O<sub>2</sub> → 2H<sub>2</sub>O
+<center>2H<sub>2</sub> + O<sub>2</sub> → 2H<sub>2</sub>O</center>
 
 == Tálá mpé ==
 * [[Etánda ya bileko]]
 
 [[Category:Mambí]]
+[[en:chemistry]]
 [[fr:Chimie]]
+[[pl:chemia]]
