+[[pt:Joseph Kabila]]

--- a/Joseph_Kabila.mw
+++ b/Joseph_Kabila.mw
@@ -29,6 +29,7 @@ Kabila abundaki na mapinzo ya barebɛl ya tata wa ye, nà bitumba oyo ememaki wa
 [[ko:조제프 카빌라]]
 [[nl:Joseph Kabila]]
 [[pl:Joseph Kabila]]
+[[pt:Joseph Kabila]]
 [[sv:Joseph Kabila]]
 [[sw:Joseph Kabila]]
 [[zh:约瑟夫·卡比拉]]
