--- a/Mokokano.mw
+++ b/Mokokano.mw
@@ -1,7 +1,7 @@
 '''Mokokano''' ya [[kémi]] (na lifalanse: ''équation chimique'', bizalí '''bikokano'''* na [[boyíké]]) ezalí kolakisa bobongwani ya bilɔ́kɔ. 
 
 nd:
-<center>NaOH + HCl -----> [[NaCl]] + H<sub>2</sub>O</center>
+<center>NaOH + HCl → [[NaCl]] + H<sub>2</sub>O</center>
 bokokano ya kosala [[mungwa]].
 
 
