kiswahili > kikɔ́ngɔ (img:Kikongo-m)

--- a/Kikɔ́ngɔ.mw
+++ b/Kikɔ́ngɔ.mw
@@ -1,5 +1,5 @@
 [[Image:LanguageMap-Kikongo-Kituba.png|thumb|Bisíká wâná bato balobaka kikɔ́ngɔ.]]
-[[Image:Kikongo-m.jpg|thumb|Ndakisa na lokotá ya kiswahili]] 
+[[Image:Kikongo-m.jpg|thumb|Ndakisa na lokotá ya kikɔ́ngɔ]] 
 '''Kikɔ́ngɔ''' ezali [[lokótá]] na bato ya [[Kɔ́ngɔ-Kinshasa|Kɔ́ngɔ Demokrati]], [[Kɔ́ngɔ-Brazaville|Kɔ́ngɔ Brazavili]] mpé na [[Angola]]. 
 
 ==Tálá mpé ==
