--- a/Kémi.mw
+++ b/Kémi.mw
@@ -1,4 +1,4 @@
-{{ndámbo}}
+[[Image:Fullerene-C60.png|left|100px|<!--Une molécule de fullerène-->]]
 '''Kémi''' (tǒ '''chimie''' na lokóta ya [[lifalansé]]) ezalí [[mambí]] ya bokabwani ya bilɔ́kɔ, ya [[likɛ́lɛ|makɛ́lɛ]].
 Lisúsu, ezalí mayébi etalí loléngé bilɔ́kɔ ezalí kokangama yangó na yangó, mpé loléngé ezalí kobongwana.
 
@@ -9,6 +9,7 @@ Ndakisa : [[mokokano]] ya kosala [[mái]]
 
 == Tálá mpé ==
 * [[Etánda ya bileko]]
+{{ndámbo}}
 
 [[Category:Mambí]]
 [[en:chemistry]]
