robot  Ajoute: fr, ht

--- a/Atome.mw
+++ b/Atome.mw
@@ -25,9 +25,11 @@ Kasi atome ezalí mpé na biténi na yangó. Biténi yangó ebengamí : [[elékt
 [[fa:اتم]]
 [[fi:Atomi]]
 [[fo:Atom]]
+[[fr:Atome]]
 [[gl:Átomo]]
 [[he:אטום]]
 [[hr:Atom]]
+[[ht:Atòm]]
 [[hu:Atom]]
 [[ia:Atomo]]
 [[id:Atom]]
