robot  Ajoute: ar, oc

--- a/Ekólo_Wali.mw
+++ b/Ekólo_Wali.mw
@@ -3,6 +3,7 @@
 [[category:Ingɛlɛ́tɛlɛ]]
 
 [[als:Wales]]
+[[ar:ويلز]]
 [[bg:Уелс]]
 [[ca:Gal·les]]
 [[cs:Wales]]
@@ -37,6 +38,7 @@
 [[nn:Wales]]
 [[no:Wales]]
 [[nrm:Galles]]
+[[oc:País de Gallas]]
 [[pl:Walia]]
 [[pt:País de Gales]]
 [[rm:Valisa]]
