--- a/Kémi.mw
+++ b/Kémi.mw
@@ -12,6 +12,98 @@ Ndakisa : [[mokokano]] ya kosala [[mái]]
 {{ndámbo}}
 
 [[Category:Mambí]]
-[[en:chemistry]]
+
+[[af:Chemie]]
+[[als:Chemie]]
+[[an:Quimica]]
+[[ar:كيمياء]]
+[[ast:Química]]
+[[bg:Химия]]
+[[bn:রসায়ন]]
+[[br:Kimiezh]]
+[[bs:Hemija]]
+[[ca:Química]]
+[[co:Chimica]]
+[[cs:Chemie]]
+[[csb:Chemijô]]
+[[cy:Cemeg]]
+[[da:Kemi]]
+[[de:Chemie]]
+[[el:Χημεία]]
+[[en:Chemistry]]
+[[eo:Kemio]]
+[[es:Química]]
+[[et:Keemia]]
+[[eu:Kimika]]
+[[fa:شیمی]]
+[[fi:Kemia]]
+[[fo:Evnafrøði]]
 [[fr:Chimie]]
-[[pl:chemia]]
+[[fur:Chimiche]]
+[[fy:Skiekunde]]
+[[ga:Ceimic]]
+[[gd:Duileolachd]]
+[[gl:Química]]
+[[he:כימיה]]
+[[hi:रसायन शास्त्र]]
+[[hr:Kemija]]
+[[ht:Chimi]]
+[[hu:Kémia]]
+[[hy:Քիմիա]]
+[[ia:Chimia]]
+[[id:Kimia]]
+[[ie:Chimie]]
+[[io:Kemio]]
+[[is:Efnafræði]]
+[[it:Chimica]]
+[[ja:化学]]
+[[ka:ქიმია]]
+[[kn:ರಸಾಯನಶಾಸ್ತ್ರ]]
+[[ko:화학]]
+[[ku:Kîmya]]
+[[la:Chemica]]
+[[lad:Kemika]]
+[[lb:Chimie]]
+[[li:Sjemie]]
+[[lt:Chemija]]
+[[lv:Ķīmija]]
+[[mi:Mātauranga matū]]
+[[mk:Хемија]]
+[[mn:Хими]]
+[[mr:रसायनशास्त्र]]
+[[ms:Kimia]]
+[[nds:Chemie]]
+[[nds-nl:Scheikunde]]
+[[nl:Scheikunde]]
+[[nn:Kjemi]]
+[[no:Kjemi]]
+[[oc:Quimia]]
+[[os:Хими]]
+[[pa:ਰਸਾਇਣ ਵਿਗਿਆਨ]]
+[[pl:Chemia]]
+[[pt:Química]]
+[[ro:Chimie]]
+[[ru:Химия]]
+[[sc:Chìmica]]
+[[sco:Chemistry]]
+[[simple:Chemistry]]
+[[sk:Chémia]]
+[[sl:Kemija]]
+[[sq:Kimia]]
+[[sr:Хемија]]
+[[su:Kimia]]
+[[sv:Kemi]]
+[[sw:Kemia]]
+[[ta:வேதியியல்]]
+[[te:రసాయన శాస్త్రము]]
+[[th:เคมี]]
+[[tk:Kimya]]
+[[tl:Kimika]]
+[[tr:Kimya]]
+[[tt:Ximiä]]
+[[ug:خىمىيە]]
+[[uk:Хімія]]
+[[vi:Hóa học]]
+[[vo:Kiemav]]
+[[zh:化学]]
+[[zh-yue:化學]]
