Image:Cg-map.png

--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -43,7 +43,7 @@
 | [[Liste des indicatifs téléphoniques internationaux par pays|Indicatif téléphonique]]                          
 | 243
 |-----
-| align="center" colspan="2" | [[Image:DRK.png]]
+| align="center" colspan="2" | [[Image:Cg-map.png]]
 |}
 '''Republiki ya Kɔ́ngɔ Demokratiki''' ezwami na ndelo ya ye ya mwa [[30 yuni]] [[1960]], ekolo ya makoki, lipanda, bonsomi, ekangani mpe ekabwani te, ya bato, ya bokonzi bouti na bato mpe eponi eyamba yoko te.
 
