--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -229,6 +229,7 @@ Na mboka misusu mbiye ekopesa moto bokasi na 40%.
 
 '''Mobéko Likonzi''' :
 * {{fr}} [[:wikisource:fr:Constitution de la République démocratique du Congo|Mobéko Likonzi]]
+* {{ln}} [http://www.radiookapi.net/bibliotheque.php Lois en français, constitution en lingála]
 
 '''Bakambi Ekolo''' :
 * [[1960]] - [[1965]] [[Joseph Kasavubu]]
