*Empty MediaWiki Message*

--- a/Tatá-mokonzi_ya_Kɔ́ngɔ_Demokratiki.mw
+++ b/Tatá-mokonzi_ya_Kɔ́ngɔ_Demokratiki.mw
@@ -1,43 +1,1 @@
-[[Category:Tatá-mokonzi ya Kɔ́ngɔ Demokratiki]]
-[[Category:Moto wa politiki ya Kɔ́ngɔ Demokratiki]]
-
-Mabomí óyo elandi elakisi liste ya bakambi-mboka óyo balandanaki o ekólo óyo eyebanaki kala na nkómbó ya ''Bôngó Ebelé'', wuta lipánda elongamaki na [[Bɛ́ljika]] ([[Eropa]]) na mokóló [[1 yuni|30 yuni]] [[1960]]. Nkómbó nyɔ́nsɔ óyo Ekólo Kɔ́ngɔ Demokratiki ezwaki bandá lipánda, makomami mpé áwa.
-
-{|border="2" cellpadding="2" cellspacing="2"
-!Nkombo
-!Ebandeli-kimokonzi
-!Suka-kimokonzi
-!Parti
-!Elembo
-|-
-| colspan="5" bgcolor=#5599cc | <center> [[Kɔ́ngɔ-Kinshasa|Kɔ́ngɔ]] </center>
-|-
-| [[Joseph Kasa-Vubu]] || [[1 yuli]] [[1960]] || [[24 novembere]] [[1965]] ||| [[Association des personnes de Bakongo|ABAKO]]  || renversé militairement par Mobutu
-|-
-| [[Mobutu Sese Seko|Joseph-Désiré Mobutu]] ||  [[25 novembere]] [[1965]] || [[1 yuli]] [[1966]] || Mil ||
-|-
-|colspan="5" bgcolor=#5599cc | <center> [[Kɔ́ngɔ Demokratiki]] </center>
-|-
-| [[Mobutu Sese Seko|Joseph-Désiré Mobutu]] || [[1 yuli]] [[1966]] || [[27 oktobele]] [[1971]] || [[Mouvement Populaire Révolutionnaire|MRP]] || 
-|-
-|colspan="5" bgcolor=#5599cc  | <center> [[Kɔ́ngɔ Demokratiki|Zaïre]] </center>
-|-
-| [[Mobutu Sese Seko]] || [[27 oktobele]] [[1971]] || [[16 mai]] [[1997]] || MRP || renversé alors qu'il était à l'étranger
-|-
-|colspan="5" bgcolor=#5599cc | <center> [[Kɔ́ngɔ Demokratiki]] </center>
-|-
-| [[Laurent-Désiré Kabila]] || [[17 mai]] [[1997]] || [[29 mai]] [[1997]] || [[Alliance des Forces Démocratiques pour la Libération du Congo (Zaïre)|AFDL]] || à titre intérimaire
-|-
-| [[Laurent-Désiré Kabila]] || [[29 mai]] [[1997]] || [[16 yanuari]] [[2001]] || AFDL || assassiné
-|-
-| [[Joseph Kabila]] || [[17 yanuari]] [[2001]] || [[26 yanuari]] [[2001]] || AFDL || fils du précédent, président par intérim
-|-
-| [[Joseph Kabila]] || [[26 yanuari]] [[2001]] || <center>-</center> || AFDL || encadré par 4 vice-présidents des factions de la [[Seconde Guerre du Kivu]].
-|-
-|}
-
-{{PartiPolitiqueRDC}}
-
-[[en:Heads of state of the Democratic Republic of the Congo]]
-[[fr:Liste des présidents de la République démocratique du Congo]]
-[[id:Presiden Republik Demokratik Kongo]]
+[[Bakambi ekólo Kɔ́ngɔ-Kinshasa]]
