*Empty MediaWiki Message*

--- a/Laurent-Désiré_Kabila.mw
+++ b/Laurent-Désiré_Kabila.mw
@@ -5,7 +5,7 @@
 '''Laurent-Désiré Kabila''' (*[[Moba]], [[Likasi]] (Jadotville), [[Katanga]], [[27 novembere]] [[1939]] - †[[Kinshasa]], [[16 yanuari]] [[2001]]); Mokambi Ekolo ya Kɔ́ngɔ-Kinshasa [[17 may]] [[1997]] – 16 novembere 2001.
 
 == Tála mpé ==
-* [[Tatá-mokonzi ya Kɔ́ngɔ Demokratiki]]
+* [[Bakambi ekólo Kɔ́ngɔ-Kinshasa]]
 
 [[category:Moto wa politiki ya Kɔ́ngɔ Demokratiki]]
 [[Category:Tatá-mokonzi ya Kɔ́ngɔ Demokratiki]]
