*Empty MediaWiki Message*

--- a/Mobutu_Sese_Seko.mw
+++ b/Mobutu_Sese_Seko.mw
@@ -5,7 +5,7 @@
 {{ndámbo}}
 
 ==Tála mpé==
-* [[Tatá-mokonzi ya Kɔ́ngɔ Demokratiki]]
+* [[Bakambi ekólo Kɔ́ngɔ-Kinshasa]]
 
 [[de:Mobutu Sese Seko]]
 [[en:Mobutu Sese Seko]]
