*Empty MediaWiki Message*

--- a/Joseph_Kasa-Vubu.mw
+++ b/Joseph_Kasa-Vubu.mw
@@ -6,7 +6,7 @@
 (Mokambi Bulamatari na yě azalákí [[Patrice Lumumba]])
 
 == Tála mpé ==
-* [[Tatá-mokonzi ya Kɔ́ngɔ Demokratiki]]
+* [[Bakambi ekólo Kɔ́ngɔ-Kinshasa]]
 
 [[category:Moto wa politiki ya Kɔ́ngɔ Demokratiki]]
 [[Category:Tatá-mokonzi ya Kɔ́ngɔ Demokratiki]]
