*Empty MediaWiki Message*

--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -1,50 +1,50 @@
-{| border="1" cellpadding="2" cellspacing="0" align="right" width="300px"
-|+ <font size="+1">'''Republiki ya Kɔ́ngɔ Demokratiki<br/>(Kɔ́ngɔ-Kinshasa)</font><br/>République Démocratique du Congo<br /> Repubilika ya Kongo Demokratika <br /> Jamhuri ya Kidemokrasia ya Kongo   <br /> Ditunga dia Kongu wa Mungalaata'''
-|-----
-| style="background:#efefef;" align="center" colspan="2" |
-{| border="0" cellpadding="2" cellspacing="0"
-|-----
-| align="center" width="285px" | [[Image:Flag of the Democratic Republic of the Congo.svg|140px]] [[Image:Armoiries de la République démocratique du Congo - 2006.png|140px]]
-|-----
-| align="center" width="280px" | ([[Bɛndɛ́lɛ ya Kɔ́ngɔ-Kinshasa|Détails]])([[Almwali ya Kɔ́ngɔ-Kinshasa|Détails]])
-|}
-|-----
-| align="center" colspan="2" style="border-bottom:3px solid gray;" | <font size="-1">''[[Devise]] nationale : Bosémbo, Bobóto, Mosálá''</font>
-|-----
-| align="center" colspan="2" | [[image:LocationDRCongo.png|200px|]]
-|-----
-| [[Lokóta ya Leta]] || [[lifalansé]]
-|-----
-| [[Nkótá ya Ekólo]]  
-| [[lingála]], [[kiswahili]],<br />[[ciluba]], [[kikɔ́ngɔ]]
-|-----
-| [[Mbóka-mokonzi]] || [[Kinshasa]]
-|-----
-| [[Molɔngɔ ya Bakambi ekolo Kɔ́ngɔ-Kinshasa|Mokambi ekolo]] || [[Joseph Kabila]]
-|-----
-| [[Etando]] <br />&nbsp;- ekokí <br />&nbsp;- % mai
-| [[Molɔngɔ́ ya bisé na etando|Classé 12]]<br /> 2 345 410 [[kilomètre carré|km²]]<br /> 3.3%              
-|-----
-| [[Bato]]<br />&nbsp;- motángo ([[Mbúla]]) <br />&nbsp;- [[Densité de population|Densité]]
-| [[Molɔngɔ́ ya bisé na bato|Classé 23]]<br /> 55 225 478 bato<br /> 24 hab./km²
-|-----
-| [[Bonsɔ́mí]]<br />&nbsp;- Date
-| ya [[ Bɛ́lɛjika]]<br />[[30 juin]] [[1960]]
-|-----
-| [[Mfalánga]] || [[Franc Congolais]]
-|-----
-| [[Fuseau horaire]]  
-| [[Temps universel coordonné|UTC]] de +1 a +2
-|-----
-| [[Hymne national]] || ''[[Debout Congolais]]''
-|-----
-| [[Internet TLD|Domaine Internet]] || .[[ISO 3166-2:CD|CD]]
-|-----
-| [[Liste des indicatifs téléphoniques internationaux par pays|Indicatif téléphonique]]                          
-| 243
-|-----
-| align="center" colspan="2" | [[Image:Cg-map.png]]
-|}
+{{Infobox Esé|
+nkómbó 			= Republiki ya Kɔ́ngɔ Demokratiki|
+nkómbó_na_lokóta	= République Démocratique du Congo<br /> Repubilika ya Kongo Demokratika <br /> Jamhuri ya Kidemokrasia ya Kongo   <br /> Ditunga dia Kongu wa Mungalaata'''|
+image_flag 		= Flag of the Democratic Republic of the Congo.svg |
+image_coat 		= Armoiries de la République démocratique du Congo - 2006.png |
+image_map 		= LocationDRCongo.png |
+mokáno			= Bosémbo, Bobóto, Mosálá|
+loyémbo			= [[Debout Congolais]] |
+nkótá_ya_lɛ́ta 		= [[lifalansé]]|
+nkótá_ya_ekólo          = [[lingála]], [[kiswahili]],<br />[[ciluba]], [[kikɔ́ngɔ]]|
+mbóka-mokonzi 		= Kinshasa|
+engúmba_monɛ́nɛ 	= [[Kinshasa]]|
+loléngé_lɛ́ta  	= [[Republiki]]|
+babengí_mokambi	= [[Bakambi ekólo Kɔ́ngɔ-Kinshasa|Mokonzi wa ekólo]] |
+nkómbo_mokambi 	= [[Joseph Kabila]] |
+etando 			= 2 345 410|
+etando_koleka		=ya 12|
+etando_bonɛ́nɛ		=2 E9|
+ndámbo_mái =3.3|
+population_estimate 	= 62 660 551|
+population_estimate_year=2006|
+population_estimate_rank=- |
+population_density 	= 27|
+population_density_rank=- |
+population_census 	= -|
+population_census_year=|
+GDP_PPP 		= -|
+GDP_PPP_year=-|
+GDP_PPP_rank=-|
+GDP_nominal		= -|
+GDP_nominal_year=-|
+GDP_nominal_rank=-|
+GDP_PPP_per_capita 	= -|
+GDP_PPP_per_capita_rank=-|
+GDP_nominal_per_capita 	= -|
+GDP_nominal_per_capita_rank=-|
+sovereignty_type 	=[[dipanda]] |
+established_events 	= - dipanda na [[Bɛ́lɛjika]]|
+established_dates 	= <br/>- 30-06-1960 |
+mosɔlɔ 	 	= [[Franc Congolais]]|currency_code=CFR|
+ngonga 		= [[Temps universel coordonné|UTC]] |utc_offset=+1 na +2 |
+ngonga_DST	= - | utc_offset_DST=- |
+cctld		= .[[ISO 3166-2:CD|CD]] |
+calling_code	= 243|
+footnotes 	= [[Image:Cg-map.png|290px]]|
+}}
+
 '''Republiki ya Kɔ́ngɔ Demokratiki''' ezwami na ndelo ya ye ya mwa [[30 yuni]] [[1960]], ekolo ya makoki, lipanda, bonsomi, ekangani mpe ekabwani te, ya bato, ya bokonzi bouti na bato mpe eponi eyamba yoko te.
 
 == Lokótá ==
