--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -37,7 +37,7 @@ GDP_nominal_per_capita_rank=-|
 sovereignty_type 	=[[dipanda]] |
 established_events 	= - dipanda na [[Bɛ́lɛjika]]|
 established_dates 	= <br/>- 30-06-1960 |
-mosɔlɔ 	 	= [[Franc Congolais]]|currency_code=CFR|
+mosɔlɔ 	 	= [[falánga ya Kɔ́ngɔ]]|currency_code=CFR|
 ngonga 		= [[Temps universel coordonné|UTC]] |utc_offset=+1 na +2 |
 ngonga_DST	= - | utc_offset_DST=- |
 cctld		= .[[ISO 3166-2:CD|CD]] |
