*Empty MediaWiki Message*

--- a/Ingɛlɛ́tɛlɛ.mw
+++ b/Ingɛlɛ́tɛlɛ.mw
@@ -11,16 +11,17 @@ image_map = LocationUnitedKingdom.png |
 mokáno = [[Dieu et mon droit]] (Royal motto)<br>([[Lifalansé]]: Nzámbe ndé likoki na ngáí)''<sup>2</sup></small> |
 loyémbo = [[God Save the Queen]]<sup>3</sup> |
 nkótá_ya_lɛ́ta = [[Nkotá ya Ingɛlɛ́tɛlɛ|None]]; [[Lingɛlɛ́sa]] ''[[de facto]]'' <sup>4</sup> |
+nkótá_ya_ekólo=|
 mbóka-mokonzi = [[Londoni]] |
 latd=51|latm=30|latNS=N|longd=0|longm=7|longEW=W|
 engúmba_monɛ́nɛ = [[Londoni]] |
-government_type = [[Constitutional monarchy]] |
-leader_titles = [[British monarchy|Queen]]<br>[[Prime Minister of the United Kingdom|Prime Minister]] |
-leader_names =  [[Elizabeth II ya Ingɛlɛ́tɛlɛ|Elizabeth II]]<br>[[Tony Blair]] |
+loléngé_lɛ́ta = [[Constitutional monarchy]] |
+babengí_mokambi = [[British monarchy|Queen]]<br>[[Prime Minister of the United Kingdom|Prime Minister]] |
+nkómbó_mokambi =  [[Elizabeth II ya Ingɛlɛ́tɛlɛ|Elizabeth II]]<br>[[Tony Blair]] |
 area_rank = 77th |
-area_magnitude = 1 E11 |
-area = 244,820 |
-percent_water = 1.3% |
+etando_bonɛ́nɛ = 1 E11 |
+etando = 244,820 |
+ndámbo_mái = 1.3% |
 population_estimate_year = Yuli 2003 |
 population_estimate = 59,553,800 <sup>6</sup>|
 population_estimate_rank = 22nd |
