*Empty MediaWiki Message*

--- a/Alémani.mw
+++ b/Alémani.mw
@@ -10,10 +10,10 @@ nkótá_ya_lɛ́ta       = [[Lialémani]]; nkótá ya *minorité [[*Dänisch]], 
 nkótá_ya_ekólo =|
 engúmba_mokonzi      = [[Berlin]] (engúmba mokonzi fedelali) |latd=52|latm=31|latNS=N|longd=13|longm=23|longEW=E|
 engúmba_monɛ́nɛ      = [[Berlin]] |
-government_type      =  |
-leader_titles        =  |
-leader_names         = [[Horst Köhler]] <small>([[Mokambi ekolo]])</small><br> [[Angela Merkel]]  <small>([[*Chancelier]])</small>|
-area                 = 357 031|area_rank=61nd|area_magnitude=1 E10|percent_water=4.2|
+loléngé_lɛ́ta      =  |
+babengí_mokambi        =  |
+nkómbó_mokambi        = [[Horst Köhler]] <small>([[Mokambi ekolo]])</small><br> [[Angela Merkel]]  <small>([[*Chancelier]])</small>|
+etando                 = 357 031|etando_koleka=61nd|etando_bonɛ́nɛ=1 E10|ndámbo_mái=4.2|
 population_estimate  = 82 501 000|population_estimate_year=2004|population_estimate_rank=14nd |
 population_density   = 231|population_density_rank=35th |
 population_census    = 82 501 000|population_census_year=2004|
