*Empty MediaWiki Message*

--- a/Namibia.mw
+++ b/Namibia.mw
@@ -4,16 +4,16 @@ nkómbó_na_lokóta	= Republic of Namibia<br><br><br>|
 image_flag 		= Flag_of_Namibia.svg |
 image_coat 		= Namibia_coa.png |
 image_map 		= LocationNamibia.png |
-national_motto 		= Unity, Liberty, Justice<br>(Lingála: bɔ́kɔ́, bonsɔ́mi, bosémbo)|
-national_anthem 	= [[Namibia, Land of the Brave]] |
+mokáno 		= Unity, Liberty, Justice<br>(Lingála: bɔ́kɔ́, bonsɔ́mi, bosémbo)|
+loyémbo 	= [[Namibia, Land of the Brave]] |
 nkótá_ya_lɛ́ta 		= [[Lingɛlɛsi]]|
 nkótá_ya_ekólo          = [[Ovambo]], [[Afrikaans]], [[Lialemani]]|
 mbóka-mokonzi 		= [[Windhoek]] (lialémani: Windhuk) |latd=46|latm=57|latNS=N|longd=7|longm=27|longEW=E|
 largest_city 		= [[Windhoek]] (lialémani: Windhuk) |
-government_type 	= [[Republiki]] |
-leader_titles 		= |
-leader_names 		= <!-- ordered by seniority -->[[]] |
-area 			= 824.292|area_rank=999nd|area_magnitude=1 E10|percent_water=0.0|
+loléngé_lɛ́ta 	= [[Republiki]] |
+babengí_mokambi 		= |
+nkómbó_mokambi		= <!-- ordered by seniority -->[[]] |
+etando 			= 824.292|etando_koleka=999nd|etando_bonɛ́nɛ=1 E10|ndámbo_mái=0.0|
 population_estimate 	= 1.954.033|population_estimate_year=2004|population_estimate_rank=999nd |
 population_density 	= 2.4|population_density_rank=999th |
 population_census 	= 7,288,010|population_census_year=2000|
@@ -24,9 +24,9 @@ GDP_nominal_per_capita 	= $000|GDP_nominal_per_capita_rank=3rd|
 sovereignty_type 	=[[Independence]] |
 established_events 	=- Declared<br> - Recognised<br> |
 established_dates 	= <br> |
-currency 	= |currency_code=NAD|
-time_zone 	= [[Central European Time|CET]] |utc_offset=+1 |
-time_zone_DST	= [[Central European Summer Time|CEST]] |utc_offset_DST=+2 |
+mosɔlɔ 	= |currency_code=NAD|
+ngonga 	= [[Central European Time|CET]] |utc_offset=+1 |
+ngonga_DST	= [[Central European Summer Time|CEST]] |utc_offset_DST=+2 |
 cctld		= [[.na]] |
 calling_code	= 264|
 footnotes 	= |
