--- a/Ingɛlandi.mw
+++ b/Ingɛlandi.mw
@@ -12,13 +12,13 @@ nkótá_ya_lɛ́ta = [[Nkotá ya Ingɛlɛ́tɛlɛ|None]]; [[Lingɛlɛ́sa]] ''[[
 mbóka-mokonzi = [[Londoni]] |
 latd=51|latm=30|latNS=N|longd=0|longm=7|longEW=W|
 engúmba_monɛ́nɛ = [[Londoni]] |
-government_type = [[Constitutional monarchy]] |
-leader_titles = [[British monarchy|Queen]]<br>[[Prime Minister of the United Kingdom|Prime Minister]] |
-leader_names =  [[Elizabeth II ya Ingɛlɛ́tɛlɛ|Elizabeth II]]<br>[[Tony Blair]] |
-area_rank = nn |
-area_magnitude = 1 E11 |
-area = 130.395 |
-percent_water = nn |
+loléngé_lɛ́ta = [[Constitutional monarchy]] |
+babengí_mokambi = [[British monarchy|Queen]]<br>[[Prime Minister of the United Kingdom|Prime Minister]] |
+nkómbó_mokambi =  [[Elizabeth II ya Ingɛlɛ́tɛlɛ|Elizabeth II]]<br>[[Tony Blair]] |
+etando_koleka = nn |
+etando_bonɛ́nɛ = 1 E11 |
+etando = 130.395 |
+ndámbo_mái = nn |
 population_estimate_year = nn |
 population_census = 49.138.831 |
 population_census_year = 2001 |
