*Empty MediaWiki Message*

--- a/Swisi.mw
+++ b/Swisi.mw
@@ -10,10 +10,10 @@ nkótá_ya_lɛ́ta       = [[Lialémani]], [[Lifalansé]], [[Litaliano]], Rumanc
 nkótá_ya_ekólo =|
 engúmba_mokonzi      = [[Bern]] (engúmba mokonzi fedelali) |latd=46|latm=57|latNS=N|longd=7|longm=27|longEW=E|
 engúmba_monɛ́nɛ      = [[Zurich]] |
-government_type      = [[Ekólo Fedelali]] |
-leader_titles        = [[Swiss Federal Council|Federal Council]]|
-leader_names         = <!-- ordered by seniority -->[[Moritz Leuenberger]] <br/><small>([[President of the Confederation (Switzerland)|Vice Pres. 2005]])</small><br>[[Pascal Couchepin]]<br>[[Joseph Deiss]]<br>[[Samuel Schmid]] <small>([[President of the Confederation (Switzerland)|Pres. 2005]])</small><br>[[Micheline Calmy-Rey]]<br>[[Christoph Blocher]]<br>[[Hans-Rudolf Merz]]|
-area                 = 41,285|area_rank=132nd|area_magnitude=1 E10|percent_water=4.2|
+loléngé_lɛ́ta      = [[Ekólo Fedelali]] |
+babengí_mokambi        = [[Swiss Federal Council|Federal Council]]|
+nkómbó_mokambi         = <!-- ordered by seniority -->[[Moritz Leuenberger]] <br/><small>([[President of the Confederation (Switzerland)|Vice Pres. 2005]])</small><br>[[Pascal Couchepin]]<br>[[Joseph Deiss]]<br>[[Samuel Schmid]] <small>([[President of the Confederation (Switzerland)|Pres. 2005]])</small><br>[[Micheline Calmy-Rey]]<br>[[Christoph Blocher]]<br>[[Hans-Rudolf Merz]]|
+etando                 = 41,285|etando_koleka=132nd|etando_bonɛ́nɛ=1 E10|ndámbo_mái=4.2|
 population_estimate  = 7,399,100|population_estimate_year=2003|population_estimate_rank=92nd |
 population_density   = 181|population_density_rank=44th |
 population_census    = 7,288,010|population_census_year=2000|
