*Empty MediaWiki Message*

--- a/Swisi.mw
+++ b/Swisi.mw
@@ -8,7 +8,7 @@ mokáno               = (none)|
 loyémbo              = [[Swiss Psalm]] |
 nkótá_ya_lɛ́ta       = [[Lialémani]], [[Lifalansé]], [[Litaliano]], Rumanch Grischun (fr: Romanche)|
 nkótá_ya_ekólo =|
-engúmba_mokonzi      = [[Bern]] (engúmba mokonzi fedelali) |latd=46|latm=57|latNS=N|longd=7|longm=27|longEW=E|
+mbóka-mokonzi      = [[Bern]] (engúmba mokonzi fedelali) |latd=46|latm=57|latNS=N|longd=7|longm=27|longEW=E|
 engúmba_monɛ́nɛ      = [[Zurich]] |
 loléngé_lɛ́ta      = [[Ekólo Fedelali]] |
 babengí_mokambi        = [[Swiss Federal Council|Federal Council]]|
