*Empty MediaWiki Message*

--- a/Namibia.mw
+++ b/Namibia.mw
@@ -9,7 +9,7 @@ loyémbo 	= [[Namibia, Land of the Brave]] |
 nkótá_ya_lɛ́ta 		= [[Lingɛlɛsi]]|
 nkótá_ya_ekólo          = [[Ovambo]], [[Afrikaans]], [[Lialemani]]|
 mbóka-mokonzi 		= [[Windhoek]] (lialémani: Windhuk) |latd=46|latm=57|latNS=N|longd=7|longm=27|longEW=E|
-largest_city 		= [[Windhoek]] (lialémani: Windhuk) |
+engúmba_monɛ́nɛ		= [[Windhoek]] (lialémani: Windhuk) |
 loléngé_lɛ́ta 	= [[Republiki]] |
 babengí_mokambi 		= |
 nkómbó_mokambi		= <!-- ordered by seniority -->[[]] |
