--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -12,7 +12,7 @@ mbóka-mokonzi 		= Kinshasa|
 engúmba_monɛ́nɛ 	= [[Kinshasa]]|
 loléngé_lɛ́ta  	= [[Republiki]]|
 babengí_mokambi	= [[Bakambi ekólo Kɔ́ngɔ-Kinshasa|Mokonzi wa ekólo]] |
-nkómbo_mokambi 	= [[Joseph Kabila]] |
+nkómbó_mokambi 	= [[Joseph Kabila]] |
 etando 			= 2 345 410|
 etando_koleka		=ya 12|
 etando_bonɛ́nɛ		=2 E9|
