*Empty MediaWiki Message*

--- a/Alémani.mw
+++ b/Alémani.mw
@@ -1,4 +1,4 @@
-{{infobox_country|
+{{infobox_Esé|
 nkómbó               = Rebubliki Fedelali ya Alémani |
 nkómbó_na_lokóta     = Bundesrepublik Deutschland |
 image_flag           = Flag of Germany.svg|140px |
