*Empty MediaWiki Message*

--- a/Alémani.mw
+++ b/Alémani.mw
@@ -8,7 +8,7 @@ mokáno               = (none)|
 loyémbo              = [[...]] (Einigkeit und Recht und Freiheit) |
 nkótá_ya_lɛ́ta       = [[Lialémani]]; nkótá ya *minorité [[*Dänisch]], [[*Sorbisch]], [[*Niederdeutsch]]|
 nkótá_ya_ekólo =|
-mbóka_mokonzi      = [[Berlin]] (engúmba mokonzi fedelali) |latd=52|latm=31|latNS=N|longd=13|longm=23|longEW=E|
+mbóka-mokonzi      = [[Berlin]] (engúmba mokonzi fedelali) |latd=52|latm=31|latNS=N|longd=13|longm=23|longEW=E|
 engúmba_monɛ́nɛ      = [[Berlin]] |
 loléngé_lɛ́ta      =  |
 babengí_mokambi        =  |
