--- a/Lialémani.mw
+++ b/Lialémani.mw
@@ -72,7 +72,7 @@
 [[simple:German language]]
 [[sk:Nemčina]]
 [[sl:Nemščina]]
-[[sq:Gjuha Gjermanishte]]
+[[sq:Gjuha Gjermane]]
 [[sr:Немачки језик]]
 [[sv:Tyska]]
 [[th:ภาษาเยอรมัน]]
