robot  Ajoute: nds, pdc Modifie: pl, ru, tr

--- a/Pápa_Benwa_XVI.mw
+++ b/Pápa_Benwa_XVI.mw
@@ -57,13 +57,15 @@
 [[mo:Папа Бенедикт ал ⅩⅥ-ля]]
 [[ms:Paus Benedict XVI]]
 [[nap:Papa Benedetto XVI]]
+[[nds:Benedikt XVI.]]
 [[nl:Paus Benedictus XVI]]
 [[nn:Pave Benedikt XVI]]
 [[no:Benedikt XVI]]
-[[pl:Papież Benedykt XVI]]
+[[pdc:Baapscht Benedict XVI]]
+[[pl:Benedykt XVI]]
 [[pt:Papa Bento XVI]]
 [[ro:Papa Benedict al XVI-lea]]
-[[ru:Бенедикт XVI (Папа Римский)]]
+[[ru:Бенедикт XVI (папа римский)]]
 [[scn:Binidittu XVI]]
 [[sco:Pape Benedict XVI]]
 [[sh:Benedikt XVI]]
@@ -76,7 +78,7 @@
 [[th:สมเด็จพระสันตะปาปาเบเนดิกต์ที่ 16]]
 [[tl:Papa Benedicto XVI]]
 [[tpi:Benedict XVI]]
-[[tr:Papa XVI. Benedikt]]
+[[tr:XVI. Benedikt]]
 [[uk:Бенедикт XVI]]
 [[vi:Benedict XVI]]
 [[war:Papa Benedicto XVI]]
