--- a/Lingɛlɛ́sa.mw
+++ b/Lingɛlɛ́sa.mw
@@ -20,7 +20,7 @@
 [[bs:Engleski jezik]]
 [[ca:Anglès]]
 [[cs:Angličtina]]
-[[cv:Aкăлчaн чĕлхи]]
+[[cv:Акăлчан чĕлхи]]
 [[cy:Saesneg]]
 [[da:Engelsk (sprog)]]
 [[de:Englische Sprache]]
@@ -65,7 +65,7 @@
 [[mk:Англиски јазик]]
 [[ms:Bahasa Inggeris]]
 [[nah:Inglestlahtoli]]
-[[nds:Ingelsch]]
+[[nds:Engelsche Spraak]]
 [[nl:Engels]]
 [[nn:Engelsk språk]]
 [[no:Engelsk språk]]
@@ -76,6 +76,7 @@
 [[pi:Āngalabhāsā]]
 [[pl:Język angielski]]
 [[pt:Língua inglesa]]
+[[rm:Lingua englaisa]]
 [[ro:Limba engleză]]
 [[ru:Английский язык]]
 [[sco:Inglis leid]]
@@ -86,6 +87,7 @@
 [[sl:Angleščina]]
 [[sq:Gjuha Angleze]]
 [[sr:Енглески језик]]
+[[st:Senyesemane]]
 [[sv:Engelska]]
 [[sw:Kiingereza]]
 [[ta:ஆங்கிலம்]]
@@ -93,8 +95,10 @@
 [[tl:Wikang Ingles]]
 [[tpi:Tok Inglis]]
 [[tr:İngilizce]]
+[[ug:ئىنگلىز تىلى]]
 [[uk:Англійська мова]]
 [[vi:Tiếng Anh]]
+[[xh:IsiNgesi]]
 [[zh:英语]]
 [[zh-min-nan:Eng-gí]]
 [[zh-yue:英語]]
