robot  Ajoute: gd Modifie: hi

--- a/Wikipedia.mw
+++ b/Wikipedia.mw
@@ -43,11 +43,12 @@ Wikipedia eza [[ensyclopedie]] óyo. Bato batangaka ngo bakomaka ngo.
 [[frp:Vuiquipèdia]]
 [[fur:Vichipedie]]
 [[ga:Vicipéid]]
+[[gd:Wikipedia]]
 [[gl:Wikipedia]]
 [[gu:વિકિપીડિયા]]
 [[gv:Wikipedia]]
 [[he:ויקיפדיה]]
-[[hi:िविकपीिडया]]
+[[hi:विकिपीडिया]]
 [[hr:Wikipedija]]
 [[ht:Wikipedia]]
 [[hu:Wikipédia]]
