--- a/Swisi.mw
+++ b/Swisi.mw
@@ -60,7 +60,7 @@ footnotes     = |
 [[af:Switserland]]
 [[als:Schweiz]]
 [[an:Suiza]]
-[[ang:Switzerland]]
+[[ang:Swissland]]
 [[ar:سويسرا]]
 [[ast:Suiza]]
 [[be:Швайцарыя]]
@@ -80,6 +80,7 @@ footnotes     = |
 [[fi:Sveitsi]]
 [[fo:Sveis]]
 [[fr:Suisse]]
+[[frp:Suisse]]
 [[fy:Switserlân]]
 [[ga:An Eilvéis]]
 [[gd:An Eilbheis]]
@@ -130,6 +131,7 @@ footnotes     = |
 [[th:ประเทศสวิตเซอร์แลนด์]]
 [[tl:Switzerland]]
 [[tr:İsviçre]]
+[[ug:شۋېتسارىيە]]
 [[uk:Швейцарія]]
 [[ur:سوئٹزرلینڈ]]
 [[vi:Thụy Sĩ]]
