*Empty MediaWiki Message*

--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -17,23 +17,18 @@ etando 			= 2 345 410|
 etando_koleka		=ya 12|
 etando_bonɛ́nɛ		=2 E9|
 ndámbo_mái =3.3|
-population_estimate 	= 62 660 551|
-population_estimate_year=2006|
-population_estimate_rank=- |
-population_density 	= 27|
-population_density_rank=- |
-population_census 	= -|
-population_census_year=|
-GDP_PPP 		= -|
-GDP_PPP_year=-|
-GDP_PPP_rank=-|
-GDP_nominal		= -|
-GDP_nominal_year=-|
-GDP_nominal_rank=-|
-GDP_PPP_per_capita 	= -|
-GDP_PPP_per_capita_rank=-|
-GDP_nominal_per_capita 	= -|
-GDP_nominal_per_capita_rank=-|
+bato_ndakisa-mitúya 	= 62 660 551|
+bato_ndakisa-mitúya_mbúla=2006|
+bato_ndakisa-mitúya_limati=23 |
+bato_na_etando 	= 27|
+bato_na_etando_limati=ya 182 |
+bato_botángi 	= 29,916,800|
+bato_botángi_mbúla= 1984|
+BOTIBO_BOZIBI 		= 35,798|
+BOTIBO_BOZIBI_mbúla=2003|
+BOTIBO_BOZIBI_limati=ya 7|
+BOTIBO_BOZIBI_moto_na_moto 	= 673|
+BOTIBO_BOZIBI_moto_na_moto_limati=ya 189|
 sovereignty_type 	=[[dipanda]] |
 established_events 	= - dipanda na [[Bɛ́lɛjika]]|
 established_dates 	= <br/>- 30-06-1960 |
