*Empty MediaWiki Message*

--- a/Swisi.mw
+++ b/Swisi.mw
@@ -14,22 +14,18 @@ loléngé_lɛ́ta      = [[Ekólo Fedelali]] |
 babengí_mokambi        = [[Swiss Federal Council|Federal Council]]|
 nkómbó_mokambi         = <!-- ordered by seniority -->[[Moritz Leuenberger]] <br/><small>([[President of the Confederation (Switzerland)|Vice Pres. 2005]])</small><br>[[Pascal Couchepin]]<br>[[Joseph Deiss]]<br>[[Samuel Schmid]] <small>([[President of the Confederation (Switzerland)|Pres. 2005]])</small><br>[[Micheline Calmy-Rey]]<br>[[Christoph Blocher]]<br>[[Hans-Rudolf Merz]]|
 etando                 = 41,285|etando_koleka=132nd|etando_bonɛ́nɛ=1 E10|ndámbo_mái=4.2|
-population_estimate  = 7,399,100|population_estimate_year=2003|population_estimate_rank=92nd |
-population_density   = 181|population_density_rank=44th |
-population_census    = 7,288,010|population_census_year=2000|
-GDP_PPP           = $233 billion|
-GDP_PPP_year=2003|BOKABO_PPP_rank=35th|
-GDP_nominal       = $309 billion|
-GDP_nominal_year=2003|
-GDP_nominal_rank=17th|
-GDP_PPP_per_capita = $30,186|
-GDP_PPP_per_capita_rank=8th|
-GDP_nominal_per_capita = $42,138|
-GDP_nominal_per_capita_rank=3rd|
-HDI_year=2004|
-HDI=0.947|
-HDI_rank=7th|
-HDI_category=<font color="#009900">high</font>|
+bato_ndakisa-mitúya 	= 7 399 100|
+bato_ndakisa-mitúya_mbúla=2003|
+bato_ndakisa-mitúya_limati=ya 92|
+bato_na_etando 	= 181|
+bato_na_etando_limati=ya 44 |
+bato_botángi 	= 7 288 010|
+bato_botángi_mbúla= 2000|
+BOTIBO_BOZIBI 		= $233 billion|
+BOTIBO_BOZIBI_mbúla=2003|
+BOTIBO_BOZIBI_limati=ya 35|
+BOTIBO_BOZIBI_moto_na_moto 	= $30,186|
+BOTIBO_BOZIBI_moto_na_moto_limati=ya 8|
 sovereignty_type     = [[Lipandá]] |
 established_events     =- Balobaki<br> - Endimamaki<br>Ekólo Fedelali |
 established_dates     =[[Monkandá ya mibéko Fedelali ya 1291]]<br> [[1 ogusti]], [[1291]]<br> [[24 oktobele]], [[1648]]<br>[[1848]]|
