*Empty MediaWiki Message*

--- a/Ingɛlɛ́tɛlɛ.mw
+++ b/Ingɛlɛ́tɛlɛ.mw
@@ -22,18 +22,18 @@ area_rank = 77th |
 etando_bonɛ́nɛ = 1 E11 |
 etando = 244,820 |
 ndámbo_mái = 1,3% |
-population_estimate_year = Yuli 2003 |
-population_estimate = 59,553,800 <sup>6</sup>|
-population_estimate_rank = 22nd |
-population_census = 58,789,194 |
-population_census_year = 2001 |
-population_density = 246.5 |
-population_density_rank = 49th |
-GDP_PPP_year = 2005 |
-GDP_PPP = $1,825,837 million |
-GDP_PPP_rank = 6th |
-GDP_PPP_per_capita = $30,658 |
-GDP_PPP_per_capita_rank = 15th |
+bato_ndakisa-mitúya 	= 59 553 800|
+bato_ndakisa-mitúya_mbúla=2003|
+bato_ndakisa-mitúya_limati=22 |
+bato_na_etando 	= 246,5|
+bato_na_etando_limati=ya 49 |
+bato_botángi 	= 58 789 194|
+bato_botángi_mbúla= 2001|
+BOTIBO_BOZIBI 		= $1,825,837 million|
+BOTIBO_BOZIBI_mbúla=2005|
+BOTIBO_BOZIBI_limati=ya 6|
+BOTIBO_BOZIBI_moto_na_moto 	= $30,658|
+BOTIBO_BOZIBI_moto_na_moto_limati=ya 15|
 sovereignty_type = [[Act of Union 1800|Establishment]] |
 established_events =  |
 established_dates = 1801<sup>5</sup>|
