*Empty MediaWiki Message*

--- a/Alémani.mw
+++ b/Alémani.mw
@@ -14,22 +14,18 @@ loléngé_lɛ́ta      =  |
 babengí_mokambi        =  |
 nkómbó_mokambi        = [[Horst Köhler]] <small>([[Mokambi ekolo]])</small><br> [[Angela Merkel]]  <small>([[*Chancelier]])</small>|
 etando                 = 357 031|etando_koleka=61nd|etando_bonɛ́nɛ=1 E10|ndámbo_mái=4.2|
-population_estimate  = 82 501 000|population_estimate_year=2004|population_estimate_rank=14nd |
-population_density   = 231|population_density_rank=35th |
-population_census    = 82 501 000|population_census_year=2004|
-GDP_PPP           = $2498 billion|
-GDP_PPP_year=2005|BOKABO_PPP_rank=5th|
-GDP_nominal       = $2498 billion|
-GDP_nominal_year=2005|
-GDP_nominal_rank=17th|
-GDP_PPP_per_capita = $30 150|
-GDP_PPP_per_capita_rank=17th|
-GDP_nominal_per_capita = $35 075|
-GDP_nominal_per_capita_rank=17rd|
-HDI_year=2004|
-HDI=|
-HDI_rank=th|
-HDI_category=<font color="#009900">high</font>|
+bato_ndakisa-mitúya 	= 82 501 000|
+bato_ndakisa-mitúya_mbúla=2004|
+bato_ndakisa-mitúya_limati=ya 14 |
+bato_na_etando 	= 231|
+bato_na_etando_limati=ya 35 |
+bato_botángi 	= 82 501 000|
+bato_botángi_mbúla= 2004|
+BOTIBO_BOZIBI 		= $2498 billion|
+BOTIBO_BOZIBI_mbúla=2005|
+BOTIBO_BOZIBI_limati=ya 5|
+BOTIBO_BOZIBI_moto_na_moto 	= $30 150|
+BOTIBO_BOZIBI_moto_na_moto_limati=ya 17|
 sovereignty_type     = [[Lipandá]] |
 established_events     =- Bikólo ya Alémani ya Molɔngɔ́<br> - Republiki Fedelali <br>- "Este" mpé "Weste" bînsɔ |
 established_dates     =<br> [[18 yanuari]] [[1871]]<br> [[23 may]] [[1949]]<br>[[3 oktobele]] [[1990]]|
