*Empty MediaWiki Message*

--- a/Swisi.mw
+++ b/Swisi.mw
@@ -13,7 +13,7 @@ engúmba_monɛ́nɛ      = [[Zurich]] |
 loléngé_lɛ́ta      = [[Ekólo Fedelali]] |
 babengí_mokambi        = [[Swiss Federal Council|Federal Council]]|
 nkómbó_mokambi         = <!-- ordered by seniority -->[[Moritz Leuenberger]] <br/><small>([[President of the Confederation (Switzerland)|Vice Pres. 2005]])</small><br>[[Pascal Couchepin]]<br>[[Joseph Deiss]]<br>[[Samuel Schmid]] <small>([[President of the Confederation (Switzerland)|Pres. 2005]])</small><br>[[Micheline Calmy-Rey]]<br>[[Christoph Blocher]]<br>[[Hans-Rudolf Merz]]|
-etando                 = 41,285|etando_koleka=132nd|etando_bonɛ́nɛ=1 E10|ndámbo_mái=4.2|
+etando                 = 41,285|etando_limati=132nd|etando_bonɛ́nɛ=1 E10|ndámbo_mái=4.2|
 bato_ndakisa-mitúya 	= 7 399 100|
 bato_ndakisa-mitúya_mbúla=2003|
 bato_ndakisa-mitúya_limati=ya 92|
