*Empty MediaWiki Message*

--- a/Alémani.mw
+++ b/Alémani.mw
@@ -13,7 +13,7 @@ engúmba_monɛ́nɛ      = [[Berlin]] |
 loléngé_lɛ́ta      =  |
 babengí_mokambi        =  |
 nkómbó_mokambi        = [[Horst Köhler]] <small>([[Mokambi ekolo]])</small><br> [[Angela Merkel]]  <small>([[*Chancelier]])</small>|
-etando                 = 357 031|etando_koleka=61nd|etando_bonɛ́nɛ=1 E10|ndámbo_mái=4.2|
+etando                 = 357 031|etando_limati=ya 61 |etando_bonɛ́nɛ=1 E10|ndámbo_mái=4.2|
 bato_ndakisa-mitúya 	= 82 501 000|
 bato_ndakisa-mitúya_mbúla=2004|
 bato_ndakisa-mitúya_limati=ya 14 |
