*Empty MediaWiki Message*

--- a/Ingɛlɛ́tɛlɛ.mw
+++ b/Ingɛlɛ́tɛlɛ.mw
@@ -18,7 +18,7 @@ engúmba_monɛ́nɛ = [[Londoni]] |
 loléngé_lɛ́ta = [[Constitutional monarchy]] |
 babengí_mokambi = [[British monarchy|Queen]]<br>[[Prime Minister of the United Kingdom|Prime Minister]] |
 nkómbó_mokambi =  [[Elizabeth II ya Ingɛlɛ́tɛlɛ|Elizabeth II]]<br>[[Tony Blair]] |
-area_rank = 77th |
+etando_limati = ya 77 |
 etando_bonɛ́nɛ = 1 E11 |
 etando = 244,820 |
 ndámbo_mái = 1,3% |
