*Empty MediaWiki Message*

--- a/Namibia.mw
+++ b/Namibia.mw
@@ -13,14 +13,19 @@ engúmba_monɛ́nɛ		= [[Windhoek]] (lialémani: Windhuk) |
 loléngé_lɛ́ta 	= [[Republiki]] |
 babengí_mokambi 		= |
 nkómbó_mokambi		= <!-- ordered by seniority -->[[]] |
-etando 			= 824.292|etando_koleka=999nd|etando_bonɛ́nɛ=1 E10|ndámbo_mái=0.0|
-population_estimate 	= 1.954.033|population_estimate_year=2004|population_estimate_rank=999nd |
-population_density 	= 2.4|population_density_rank=999th |
-population_census 	= 7,288,010|population_census_year=2000|
-GDP_PPP 		= $000 billion|GDP_PPP_year=2003|GDP_PPP_rank=35th|
-GDP_nominal		= $000 billion|GDP_nominal_year=2003|GDP_nominal_rank=17th|
-GDP_PPP_per_capita 	= $000|GDP_PPP_per_capita_rank=8th|
-GDP_nominal_per_capita 	= $000|GDP_nominal_per_capita_rank=3rd|
+etando 			= 824.292|etando_limati = - |etando_bonɛ́nɛ=1 E10|ndámbo_mái=0.0|
+bato_ndakisa-mitúya 	= 1 954 033|
+bato_ndakisa-mitúya_mbúla=2004|
+bato_ndakisa-mitúya_limati= - |
+bato_na_etando 	= 2,4|
+bato_na_etando_limati=- |
+bato_botángi 	= 7 288 010|
+bato_botángi_mbúla= 2000|
+BOTIBO_BOZIBI 		= -|
+BOTIBO_BOZIBI_mbúla=-|
+BOTIBO_BOZIBI_limati=-|
+BOTIBO_BOZIBI_moto_na_moto 	= -|
+BOTIBO_BOZIBI_moto_na_moto_limati=-|
 sovereignty_type 	=[[Independence]] |
 established_events 	=- Declared<br> - Recognised<br> |
 established_dates 	= <br> |
